codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exec_approval_modal_exec.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 15 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  ◇ Approve this command?                                                       ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Allow this command (y)                                                     ",
        "     Runs this action once.                                                     ",
        "  2. Tell Codex what to do instead (esc)                                        ",
        "     Stops this request and returns to Codex.                                   ",
        "                                                                                ",
        "  enter select · esc stop & reply                                               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 10, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 11, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 15, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED,
        x: 27, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
