codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_groups_interleaved_actions.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Explored
  ├ Listed ls -la, src
  ├ Read foo.txt, bar.txt, baz.txt
  └ Searched needle in src, other in tests
