codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step4_finish_cat_foo.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
✓ 2 commands completed
  ├ ✓ ls -la
  ├ ✓ cat foo.txt
  └ Ctrl+T transcript
